[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turtle2_basic"
version = "0.1.0"
description = "Turtle2 robot basic controllers and HTTP API"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests",
    "numpy",
]

[project.optional-dependencies]
ros = []  # rospy, cv_bridge, sensor_msgs are provided by the ROS environment

[tool.setuptools.packages.find]
where = ["."]
